src/test/deca/context/invalid/testNameClassPredefined.deca
// Description : Le nom de la classe est un type prédéfini
class int {
    float a;
}
